--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">ジェル</button>
+            <button type="button" onclick="showMenu('male')">ハンド</button>
             <button type="button" onclick="showMenu('female')">フット</button>
             <button type="button" onclick="showMenu('whitening')">オフのみ</button>
             <button type="button" onclick="showMenu('sonota')">その他メニュー</button>
@@ -728,7 +728,7 @@
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ジェル◆</span>
+                <span class="highlight-text">◆ハンド◆</span>
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">《ハンド》ワンカラー　ケア込♪</button>
