--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2007233524-p7d3Oa3V'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
