--- a/index.html
+++ b/index.html
@@ -288,21 +288,32 @@
         }
 
         .week-button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 10px;
-        }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
 
-        .week-button {
-            padding: 10px 20px;
-            background-color: #444444;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+.week-button {
+    padding: 10px 20px;
+    background-color: #444444;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    transform-origin: center center;
+}
+
+.week-button:hover {
+    background-color: #583962;
+    transform: scale(1.15); /* ドーン！ってくらい拡大🔥 */
+}
+
+.week-button:active {
+    transform: scale(0.95); /* クリックした瞬間にギュッと縮む💥 */
+}
 
         .month-button-container {
             display: flex;
@@ -320,6 +331,15 @@
             border-radius: 4px;
             cursor: pointer;
         }
+
+        .month-button:hover {
+    background-color: #583962;
+    transform: scale(1.15); /* ドーン！ってくらい拡大🔥 */
+}
+
+.month-button:active {
+    transform: scale(0.95); /* クリックした瞬間にギュッと縮む💥 */
+}
 
         .current-month {
             font-size: 16px;
@@ -718,7 +738,7 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">ジェル</button>
+            <button type="button" onclick="showMenu('male')">ハンド</button>
             <button type="button" onclick="showMenu('female')">フット</button>
             <button type="button" onclick="showMenu('handfemale')">ハンド＆フット</button>
             <button type="button" onclick="showMenu('whitening')">オフのみ</button>
@@ -729,7 +749,7 @@
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ジェル◆</span>
+                <span class="highlight-text">◆ハンド◆</span>
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">《ハンド》ワンカラー　ケア込♪</button>
@@ -1387,7 +1407,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbxrUrwJD2RF3Qzrc8nJixuKOVgsK7Ha6VUV2p9lrFvFjWI9i8KU3KtjMwWikNg_5p3-/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwFANnPxdIRMQl7d_w1AUIW3uy06Fl2vYZKdq4bJEk9M5POCwkGJ1XbeGeaDScP0AB6/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
