--- a/index.html
+++ b/index.html
@@ -983,8 +983,10 @@
             '《オプション》ラメ/ライナーライン': 10,
             '《オプション》アート1本～2本': 15,
             '《新規様用》他店ジェルオフ': 30,
-            '《再来様用》当店ジェルオフ': 30,
-            '《再来様用》他店ジェルオフ': 30,
+            '《再来様用》【ハンド】当店ジェルオフ': 30,
+            '《再来様用》【ハンド】他店ジェルオフ': 30,
+            '《再来様用》【フット】当店ジェルオフ': 30,
+            '《再来様用》【フット】他店ジェルオフ': 30,
             '長さだし1本': 15,
             '長さだし2本': 20,
             '長さだし3本': 25,
