--- a/index.html
+++ b/index.html
@@ -770,8 +770,8 @@
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《オプション》ラメ/ライナーライン</button>
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《オプション》アート1本～2本</button>
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《新規様用》他店ジェルオフ</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》当店ジェルオフ</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》他店ジェルオフ</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》【ハンド】当店ジェルオフ</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》【ハンド】他店ジェルオフ</button>
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">長さだし1本</button>
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">長さだし2本</button>
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">長さだし3本</button>
@@ -805,8 +805,8 @@
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">《オプション》ラメ/ライナーライン</button>
                 <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">《オプション》アート1本～2本</button>
                 <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">《新規様用》他店ジェルオフ</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》当店ジェルオフ</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》他店ジェルオフ</button>
+                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》【フット】当店ジェルオフ</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">《再来様用》【フット】他店ジェルオフ</button>
             </div>
         </div>
 
